--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -1,9 +1,10 @@
 .contactPage{
     display: flex;
     flex-direction: column;
-    padding: 2em 5em;
+    padding-top: 10em;
+    padding-left: 5em;
     gap: 20px;
-    margin-top: 5em;
+    /* margin-top: 5em; */
 }
 .contactPage .headingTitle{
     font-size: 2.5em;
@@ -76,6 +77,9 @@ a{
     font-size: 1em;
 }
 @media (max-width: 768px) {
+    .contactPage{
+    padding-left: 2em;
+}
     .description {
         width: 100%;
     }
