--- a/src/pages/Services.module.css
+++ b/src/pages/Services.module.css
@@ -1,6 +1,6 @@
 .services {
-  padding: 3em 5em;
-
+  padding-top: 10em;
+  padding-left: 5em;
 }
 .content{
     display: flex;
@@ -28,7 +28,7 @@
 }
 @media (max-width: 768px) {
   .services {
-    padding: 2em 1em;
+    padding-left: 2em;
   }
   .content {
     width: 100%;
@@ -36,15 +36,12 @@
   }
   .title {
     font-size: 2.5em;
-    text-align: center;
   }
   .content .description {
     font-size: 1em;
-    text-align: center;
   }
   .servicesList {
     flex-direction: column;
-    align-items: center;
     gap: 1.5em;
   }
 }
