--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -79,6 +79,7 @@ a{
 @media (max-width: 768px) {
     .contactPage{
     padding-left: 2em;
+    padding-right: 2em;
 }
     .description {
         width: 100%;
