--- a/src/pages/FAQs.module.css
+++ b/src/pages/FAQs.module.css
@@ -7,7 +7,7 @@
 .faqTitle {
   font-size: 2rem;
   font-weight: bold;
-  color: #004080;
+  color: var(--blue-color);
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -20,10 +20,9 @@
 
 .faqItem {
   border: 1px solid #ddd;
-  border-radius: 6px;
+  border-radius: 3px;
   overflow: hidden;
   background-color: #fff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
 .faqQuestion {
@@ -38,12 +37,11 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  color: #333;
 }
 
 .toggleIcon {
   font-size: 1.5rem;
-  color: #004080;
+  color: var(--blue-color);
 }
 
 .faqAnswer {
