changing the os to pop

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root{
-    --blue-color: #003399;
+    --actual-color: #003399;
+    --blue-color: #222;
     --white-color: #f8fcfd;
     --cta-color: #f1b625;
     --background-color: #f9fcff;
