--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -1,59 +1,92 @@
-.banner{
-   width: 100vw;
-   position: relative;
-   background-color: #00339980;
-   height: 50em;
+.banner {
+  width: 100vw;
+  position: relative;
+  background-color: #222;
+  /* height: 50em; */
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  overflow: hidden;
+  padding-bottom: 50px;
 }
-.bannerImage{
+
+/* Logo in top-left */
+.logoBox {
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  z-index: 3;
+}
+.logo {
+  width: 150px;
+  height: auto;
+}
+
+.bannerImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: -1;
+}
+
+.bannerContent {
+  padding: 2em 5em;
+  color: var(--white-color);
+  z-index: 2;
+  text-align: left;
+}
+
+.bannerContent .heading {
+  font-size: 3.2rem;
+  padding-top: 2em;
+  line-height: 80px;
+  font-weight: 800;
+}
+
+.bannerContent h2 {
+  width: 40em;
+  font-size: 1.4rem;
+  padding-top: 1.2em;
+  line-height: 40px;
+  font-weight: 400;
+}
+
+.bannerContent button {
+  margin-top: 3em;
+  padding: 1em 3em;
+  color: var(--white-color);
+  background-color: var(--cta-color);
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.bannerContent button:hover {
+  background-color: #ff9900; /* hover effect */
+}
+
+@media (max-width: 768px) {
+  .bannerContent {
+    padding: 2em 1em;
+  }
+  .bannerContent .heading {
+    font-size: 2.4rem;
+    line-height: 60px;
+  }
+  .bannerContent h2 {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 7px;
-    left: 0;
-    z-index: -1;
-}
-.bannerContent{
-    padding: 2em 5em;
-    color: var(--white-color);
-    z-index: 2;
-}
-.bannerContent .heading{
-   font-size: 3.2rem;
-   padding-top: 2em;
-   line-height: 80px;
-   font-weight: 800;
-}
-.bannerContent h2{
-    width: 40em;
-    font-size: 1.4rem;
-    padding-top: 1.2em;
-    line-height: 40px;
-    font-weight: 400;
-}
-.bannerContent button{
-    margin-top: 3em;
-    padding: 1em 3em;
-    color: var(--white-color);
-    background-color: var(--cta-color);
-    border: none;
     font-size: 1.2rem;
-    z-index: 2;
-}
-@media (max-width: 768px){
-    .bannerContent{
-        padding: 2em 1em;
-    }
-    .bannerContent .heading{
-        font-size: 2.4rem;
-        line-height: 60px;
-    }
-    .bannerContent h2{
-        width: 100%;
-        font-size: 1.2rem;
-        line-height: 30px;
-    }
-    .bannerContent button{
-        font-size: 1rem;
-    }
+    line-height: 30px;
+  }
+  .bannerContent button {
+    font-size: 1rem;
+  }
+  .logo {
+    width: 100px;
+  }
 }
